# fast-intersection

./: .gitmodules  Cargo.toml  lib.rs
benches/: benchmarks.rs  intersections.rs
simdintersection-sys/: Cargo.toml  build.rs  lib.rs
slow-intersection/: Cargo.toml  lib.rs
streamvbyte-sys/: Cargo.toml  build.rs  lib.rs
